# pygui-rectangle-fitter

./: .gitignore  Rectangle.py  main.py  playground.py  pyproject.toml  scrap.txt
