[tool.poetry]
name = "rectangle-fit"
version = "0.1.0"
description = ""
authors = ["Ibragim Kuliev <ibragim.kuiev@dw.com>"]
readme = "README.md"
packages = [{include = "rectangle_fit"}]

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
